found code to get peices to detach. it works. .problem.. peices are not aligned correctly bc of size its cut. Thinking of overlapping the boxes

--- a/jasminejeane/project-1/style.css
+++ b/jasminejeane/project-1/style.css
@@ -14,16 +14,18 @@ h1 {
 	top: -37px;
     left: 602px;
     font-size: 60px;
-	color: black;
+/*	text-shadow: 3px 3px 5px 6px black;
+*/;
 
 }
 
 h2 {
 	position: absolute;
 	font-size: 30px;
-
 	top: 30px;
     left: 875px;
+/*    text-shadow: 3px 3px 5px 6px black;
+*/
 }
 
 
@@ -47,7 +49,7 @@ h2 {
 		border: 10px solid grey;
 		position: absolute;
 		top: 126px;
-    	left: 440px;
+    	left: 387px;
 
 }
 
@@ -55,8 +57,8 @@ h2 {
 .box {
 	width: 120px;
 	height: 80px;
-	border: .01px solid black;
-	position: absolute;
+/*	border: .01px solid black;
+*/	position: absolute;
 
 }
 
